[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "maintaincheck"
version = "0.1.0"
description = "A tiny CLI that audits open source repository hygiene."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "shaoxinjiang" }
]
keywords = ["open-source", "cli", "github", "repository", "audit"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Quality Assurance"
]

[project.scripts]
maintaincheck = "maintaincheck.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/maintaincheck"]

[tool.pytest.ini_options]
testpaths = ["tests"]

